[package]
name = "solana-rust-axum-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
dotenv = "0.15.0"
solana-client = "1.17.16"
solana-sdk = "1.17.16"
serde = "1.0.196"
serde_json = "1.0.113"
